# sugarbeet-weed-segmentation

./: .gitignore  CITATION.md  CLAUDE.md  LICENSE  README.md  benchmark.py  inference.py  predict.py  pyproject.toml
callbacks/: postprocessor.py  visualizer.py
config/: config_deeplab.yaml  config_erfnet.yaml  erfnet_predict.yaml
datasets/: __init__.py  augmentations_geometry.py  mydataset.py
modules/: __init__.py  module.py
scripts/: benchmark.sh  predict.sh  val.sh
src/: benchmark.py  conversion.ipynb  inference.py  predict.py  predict_trt.py  test.py  train.py  val.py
tools/: calculate_class_weights.py  calculate_means_stds.py  visualize.py
